log
Thu 04 May 2023 10:57:58 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:25: error: comparison between pointer and integer [-Werror]
   64 |         if(n->sudo[i][j]==NULL){
      |                         ^~
sudoku.c:66:21: error: statement with no effect [-Werror=unused-value]
   66 |           n->sudo[i][j];
      |           ~~~~~~~~~~^~~
sudoku.c:70:17: error: ‘curre’ undeclared (first use in this function)
   70 |     if(is_valid(curre) == 0){
      |                 ^~~~~
sudoku.c:70:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:71:14: error: expected expression before ‘List’
   71 |     pushBack(List *list, void *data);
      |              ^~~~
sudoku.c:71:5: error: too few arguments to function ‘pushBack’
   71 |     pushBack(List *list, void *data);
      |     ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d21b3ee
Thu 04 May 2023 10:58:14 PM UTC: 
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:25: error: comparison between pointer and integer [-Werror]
   64 |         if(n->sudo[i][j]==NULL){
      |                         ^~
sudoku.c:66:21: error: statement with no effect [-Werror=unused-value]
   66 |           n->sudo[i][j];
      |           ~~~~~~~~~~^~~
sudoku.c:70:17: error: ‘curre’ undeclared (first use in this function)
   70 |     if(is_valid(curre) == 0){
      |                 ^~~~~
sudoku.c:70:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:71:14: error: expected expression before ‘List’
   71 |     pushBack(List *list, void *data);
      |              ^~~~
sudoku.c:71:5: error: too few arguments to function ‘pushBack’
   71 |     pushBack(List *list, void *data);
      |     ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
033a97d
Thu 04 May 2023 11:04:58 PM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:27: error: expected expression before ‘;’ token
   67 |             n->sudo[i][j]=;
      |                           ^
sudoku.c:69:22: error: expected expression before ‘List’
   69 |             pushBack(List *list, void *data);
      |                      ^~~~
sudoku.c:69:13: error: too few arguments to function ‘pushBack’
   69 |             pushBack(List *list, void *data);
      |             ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
In file included from test.c:5:
sudoku.c:66:19: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   66 |             Node* nuevo=
      |                   ^~~~~
sudoku.c:60:11: error: unused variable ‘list’ [-Werror=unused-variable]
   60 |     List* list=createList();
      |           ^~~~
sudoku.c: At top level:
sudoku.c:75:5: error: expected identifier or ‘(’ before ‘return’
   75 |     return list;
      |     ^~~~~~
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:5: error: control reaches end of non-void function [-Werror=return-type]
   74 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
c46ed51
Thu 04 May 2023 11:06:51 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:31: error: expected expression before ‘Node’
   66 |             Node* nuevo= copy(Node *n)
      |                               ^~~~
sudoku.c:67:13: error: expected ‘,’ or ‘;’ before ‘nuevo’
   67 |             nuevo->sudo[i][j]= cont;
      |             ^~~~~
sudoku.c: At top level:
sudoku.c:76:5: error: expected identifier or ‘(’ before ‘return’
   76 |     return list;
      |     ^~~~~~
sudoku.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
   75 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
e8eeb26
Thu 04 May 2023 11:07:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c:76:5: error: expected identifier or ‘(’ before ‘return’
   76 |     return list;
      |     ^~~~~~
sudoku.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:5: error: control reaches end of non-void function [-Werror=return-type]
   75 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
2cad7f0
Thu 04 May 2023 11:08:12 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
8d72ca9
